implement endpoint for product edition