@@ -4,7 +4,6 @@ import com.greenfoxacademy.springwebapp.services.UserAuthenticationService;
 import com.greenfoxacademy.springwebapp.services.UserAuthenticationServiceImpl;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
-
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.GrantedAuthority;
@@ -13,6 +12,7 @@ import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
 
 import static junit.framework.TestCase.assertEquals;
 
@@ -24,7 +24,7 @@ public class AdminRoleUnitTest {
   void checkIfTheUserHasAdminRole_withValidAdminRole_ShouldReturnTrue() {
     String role = "ADMIN";
     GrantedAuthority authority = new SimpleGrantedAuthority("ROLE_" + role);
-    Collection<? extends GrantedAuthority> authorities = Arrays.asList(authority);
+    Collection<? extends GrantedAuthority> authorities = List.of(authority);
     Authentication authentication = new UsernamePasswordAuthenticationToken("testAdmin", "test12345", authorities);
 
     Boolean expectedBoolean = true;
@@ -36,7 +36,7 @@ public class AdminRoleUnitTest {
   void checkIfTheUserHasAdminRole_withOnlyUserRole_ShouldReturnFalse() {
     String role1 = "User";
     GrantedAuthority authority = new SimpleGrantedAuthority("ROLE_" + role1);
-    Collection<? extends GrantedAuthority> authorities = Arrays.asList(authority);
+    Collection<? extends GrantedAuthority> authorities = List.of(authority);
     Authentication authentication1 = new UsernamePasswordAuthenticationToken("reka", "reka12345", authorities);
 
     Boolean expectedBoolean = false;
